--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,1 +1,13 @@
-<html><head><title>{{ .Title }}</title></head><body><h1>{{ .Title }}</h1>{{ range .Pages }}<h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2><p>{{ .Summary }}</p>{{ end }}</body></html> 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>{{ .Title }}</title>
+</head>
+<body>
+    <h1>{{ .Title }}</h1>
+    {{ range .Pages }}
+        <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+        <p>{{ .Summary }}</p>
+    {{ end }}
+</body>
+</html>
