--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="{{ "font-awesome/css/font-awesome.min.css" | relURL }}">
+    <link rel="stylesheet" href="{{ "css/main.css" | relURL }}">
     <title>{{ .Title }}</title>
 </head>
 <body>
